--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 # Change baseurl before deploy
-baseurl = "https://acoursey3.github.io"
+baseurl = "https://acoursey3.github.io/personal-site/"
 languageCode = "en-us"
 paginate = 5
 title = "Hugo Theme Stack Starter"
